[tool.poetry]
name = "rsa-scratch"
version = "0.1.0"
description = ""
authors = ["Shota Shimizu <shota.shimizu@quantumblack.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0"
jedi = "<0.18"
black = "*"
blackcellmagic = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
